Style: Fix description clipping

--- a/src/components/styles/productMainView.scss
+++ b/src/components/styles/productMainView.scss
@@ -41,6 +41,9 @@
   font-size: 16px;
   line-height: 159.96%;
   color: #1D1F22;
+  min-height: 200px;
+  max-height: 300px;
+  overflow: scroll;
 }
 
 .centerImage {
